--- a/src/assets/sass/2-base/_normalization.scss
+++ b/src/assets/sass/2-base/_normalization.scss
@@ -43,34 +43,23 @@ html {
   -webkit-tap-highlight-color: transparent;
 
   scroll-behavior: smooth;
-
-  // user-select: none;
 }
 
 body {
   height: 100%;
-  overflow: hidden;
 
-  // min-width: 375px;
+  min-width: 375px;
 
   padding: 0;
   margin: 0;
+  overflow: hidden;
 
-  // color: var(--color-text);
-  // font-family: $font-family-condensed;
+  line-height: 1.4;
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 1.4;
   word-break: break-word;
   text-align: left;
-
-  // background-color: var(--color-bg);
-  // background-color: var(--color-muted-01);
-
-  // overscroll-behavior-y: none;
-
-  // @include no-scrollbar;
 }
 
 // tags
@@ -86,13 +75,16 @@ button {
   font-weight: 400;
 }
 
+
 label:focus {
   outline: none;
 }
 
+
 iframe {
   display: block;
 }
+
 
 img {
   position: relative;
@@ -102,30 +94,19 @@ img {
   max-width: 100%;
 }
 
-picture {
-  // position: relative;
 
+picture {
   display: block;
   height: auto;
 
-  // max-width: 100%;
-
   img.loading {
-    opacity: 0;
-
     transition: opacity 0.2s linear;
+    opacity: 0;
 
     &.loaded {
       opacity: 1;
     }
   }
-}
-
-h2 {
-  margin-top: 10px;
-  margin-bottom: 24px;
-
-  font-size: rem(20px);
 }
 
 p {
@@ -137,47 +118,4 @@ hr {
   min-height: 1px;
 
   margin: 0;
-
-  border: none;
-
-  background: var(--color-muted-03);
-
-  &.spaced {
-    margin-top: 30px;
-    margin-bottom: 20px;
-  }
-
-  &.spaced--btm {
-    margin-bottom: 32px;
-  }
-
-  &.dashed {
-    height: 0;
-
-    border-top: 1px dashed var(--color-muted-03);
-
-    background: none;
-
-    &.spaced {
-      margin: 17px 7px;
-    }
-  }
-
-  &.spaced--sm {
-    margin-top: 13px;
-    margin-bottom: 13px;
-  }
-
-  &.spaced--lg {
-    margin-top: 40px;
-    margin-bottom: 30px;
-  }
-
-  &.gradient {
-    background: linear-gradient(90deg, var(--color-bg) 0%, var(--color-muted-13) 50%, var(--color-bg) 100%);
-  }
-
-  &.dark {
-    background-color: #c4c4c4;
-  }
 }
