--- a/src/assets/sass/0-variables/_sass-variables.scss
+++ b/src/assets/sass/0-variables/_sass-variables.scss
@@ -2,36 +2,35 @@
   Variables
 */
 
+// Fonts
 $font-family-condensed: 'Roboto Condensed', sans-serif;
-$font-family: 'Roboto', sans-serif;;
+$font-family: 'Roboto', sans-serif;
 
 
+// Colors - blue
+$color-darkblue: #102031;
+$color-darkerblue: #222628;
+$color-lightblue: #6d82a3;
+$color-blue: #5884c4;
+$color-blue-a15: rgba(#5884c4, 0.15);
 
+// Colors - white
+$color-white: #fff;
+$color-white-a50: rgba( $color-white, 0.5);
+$color-white-a06: rgba( $color-white, 0.06);
 
-// Rem ratio default size
-$default-scaling-font-size: 16px;
+// Colors - blacks and grays
+$color-black: #000;
+$color-black-a30: rgba( #000, 0.3);
+$color-black-a15: rgba( #000, 0.15);
+$color-darkgray: #161616;
+$color-darkgray-a80: rgba($color-darkgray, 0.8);
+$color-gray: #333;
+$color-gray-lighter: #434343;
 
-// Rem easy calculations
-@function rem( $pxValue ) {
-  // @return #{ math.div( strip-unit( $pxValue ) , strip-unit( $default-scaling-font-size ) ) }rem;
-  @return #{ math.div( $pxValue , $default-scaling-font-size ) }rem;
-}
+// Colors - yellow
+$color-yellow: #d39810;
 
-
-
-// Remove scrollbar
-@mixin no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-
-  -webkit-overflow-scrolling: touch;
-  scroll-behavior: smooth;
-
-  &::-webkit-scrollbar,
-  &::-webkit-scrollbar-track,
-  &::-webkit-scrollbar-thumb {
-    display: none;
-
-    background: transparent;
-  }
-}
+// Border radius
+$border-radius: rem(4px);
+$border-radius-inner: rem(2px);
