--- a/src/assets/sass/2-base/_component-transitions.scss
+++ b/src/assets/sass/2-base/_component-transitions.scss
@@ -14,31 +14,13 @@
 }
 
 
-// Slide up
-.component-slideup {
-  transform-origin: 100% 0;
+// ..
+.component-fade-fast-enter-active,
+.component-fade-fast-leave-active {
+  transition: opacity 0.1s ease;
 }
 
-.component-slideup-enter-active,
-.component-slideup-leave-active {
-  transition: transform 0.1s linear, opacity 0.1s linear;
-  transform-origin: 100% 0;
-
-  // transform: scale(1);
-  // transform: translate3d(0, 0, 0)
-  // transform: scale(1)
-}
-
-.component-slideup-enter-from,
-.component-slideup-leave-to {
-  // transform: translate3d(0, -20px, 0)
-  transform: scale(1, 0.9);
-  transform-origin: 100% 0;
+.component-fade-fast-enter-from,
+.component-fade-fast-leave-to {
   opacity: 0;
 }
-
-// .component-slideup-leave-to {
-//   opacity: 0;
-//   transform: translate3d(0, 20px, 0)
-// }
-
