feat: css focus

--- a/src/assets/sass/3-layout/_base.scss
+++ b/src/assets/sass/3-layout/_base.scss
@@ -26,3 +26,9 @@ body {
 
   flex-direction: column;
 }
+
+input:focus,
+button:focus {
+  outline: solid 2px var(--color-text-active);
+  outline-offset: -2px;
+}
