feat: error alert

--- a/src/assets/sass/0-variables/_sass-variables.scss
+++ b/src/assets/sass/0-variables/_sass-variables.scss
@@ -40,6 +40,9 @@ $color-gray-lighter: #434343;
 // Colors - yellow
 $color-yellow: #d39810;
 
+// Colors - red
+$color-red: #991313;
+
 // Border radius
 $border-radius: rem(4px);
 $border-radius-inner: rem(2px);
